Refactor day 2's solution
Inspired by Michael Bull's implementation